--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   	<title>Currículo digital | Maximiliano alves da cruz</title>
     <meta charset="utf-8">
     <!--Import Google Icon Font-->
-    <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!--Import Font OpenSans-->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700,800" rel="stylesheet">
     <!--Import materialize.css-->
